# manga_parser

./: .env  .gitattributes  .gitignore  Cargo.toml
configs/: default.yaml.dis  madara.yaml
schema/: array_selector.schema.yaml  config.schema.yaml  string_selector.schema.yaml
src/: error.rs  lib.rs
src/config/: accept.rs  array_selector.rs  array_selector_options.rs  chapter.rs  images.rs  mod.rs  search.rs  string_selector.rs
src/core/: config.rs  config.rs.dis  config.rs.dis2  mod.rs  scraper.rs  scraper.rs.dis  scraper_manager.rs
src/core/config/: accept.rs  array_selector.rs  array_selector_options.rs  chapter.rs  manga.rs  mod.rs  search.rs  string_selector.rs  string_selector_options.rs  text_selector.rs  text_selector_options.rs
src/model/: chapter.rs  manga.rs  manga_config.rs  mod.rs  search_manga.rs
src/scraper/: generic.rs  mangadex.rs  mod.rs  scraper_manager.rs
src/util/: cloudflare_bypass_middleware.rs  date.rs  kuchiki_elements.rs  mod.rs  number.rs
tests/: manga.rs
tests/fragments/: madara.html
tests/fragments/config/: array_selectors.yaml  string_selectors.yaml  text_selector.yaml
