[package]
name = "manga_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0", features = ["serde"] }
config = { version = "0", features = ["yaml", "toml", "json"] }
serde = { version = "1", features = ["derive"] }
serde_regex = "1"
regex = "1"
notify = { version = "6", optional = true }
kuchiki = { git = "https://github.com/hubble459/kuchiki-pseudos.git" }
thiserror = "1"
lazy_static = "1"
tokio = "1"
futures = "0"
async-trait = "0"
itertools = "0"
convert_case = "0"
reqwest = { version = "0", features = ["cookies", "json"] }
http-cache-reqwest = "0"
reqwest-middleware = "0"
reqwest-retry = "0"
fake_user_agent = "0"
task-local-extensions = "0"
anyhow = "1"
log = "0"
simple-builder = { git = "https://github.com/hubble459/simple-builder.git" }
strum = { version = "0.26", features = ["derive"] }
# simple-builder = { path = "../simple-builder" }

[features]
default = ["serde", "debug", "watch_dir"]
serde = []
debug = []
watch_dir = ["dep:notify"]

[dev-dependencies]
env_logger = "0"
test-log = { version = "*", features = ["log"] }
